--- a/src/main/resources/templates/allTherapists.html
+++ b/src/main/resources/templates/allTherapists.html
@@ -176,7 +176,7 @@ WEBSITE: https://themefisher.com
         <div class="footer-top">
             <div class="container">
                 <div class="row justify-content-between">
-                    <div class="col-lg-4 mb-5 mb-lg-0">
+                    <div class="col-lg-5 mb-5 mb-lg-0">
                         <div class="about-widget">
                             <div class="footer-logo">
                                 <h2>Lighthouse E-Clinic</h2>
@@ -186,7 +186,7 @@ WEBSITE: https://themefisher.com
                                   </a>
                                 </figure> -->
                             </div>
-                            <p>Lighthouse E-Clinic is a new and innovative online system that delivers clinical services to people experiencing mental health problems. The makes clinical care free and accessible to people wherever and whenever they need it.</p>
+                            <p style="width:90%">Lighthouse E-Clinic is a new and innovative online system that delivers clinical services to people experiencing mental health problems. The makes clinical care free and accessible to people wherever and whenever they need it.</p>
                             <ul class="location-link">
 
                                 <li class="item">
@@ -217,7 +217,7 @@ WEBSITE: https://themefisher.com
                         </div>
                     </div>
                     <!--                    ToDo: Edit links-->
-                    <div class="col-lg-3 col-md-5 mb-3 mb-md-0">
+                    <div class="col-lg-2 col-md-5 mb-3 mb-md-0">
                         <h2>QUICK LINKS</h2>
                         <ul class="menu-link">
                             <li>
@@ -297,6 +297,7 @@ WEBSITE: https://themefisher.com
             </div>
         </div>
     </footer>
+
     <!-- scroll-to-top -->
     <div id="back-to-top" class="back-to-top">
         <i class="fa fa-angle-up"></i>
