--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -19,7 +19,7 @@ WEBSITE: https://themefisher.com
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
   <meta name="author" content="Themefisher">
   <meta name="generator" content="Themefisher Medical HTML Template v1.0">
-  
+
   <!-- ** Plugins Needed for the Project ** -->
   <!-- bootstrap -->
   <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
@@ -36,10 +36,11 @@ WEBSITE: https://themefisher.com
   <link rel="stylesheet" href="plugins/jquery-ui/jquery-ui.css">
   <!-- timePicker -->
   <link rel="stylesheet" href="plugins/timePicker/timePicker.css">
-  
+
   <!-- Stylesheets -->
   <link href="css/style.css" rel="stylesheet">
-  
+  <link href="css/test.css" rel="stylesheet">
+
   <!--Favicon-->
   <link rel="icon" href="images/favicon.png" type="image/x-icon">
 
@@ -134,11 +135,12 @@ WEBSITE: https://themefisher.com
 <section class="page-title text-center" style="background-image:url(images/background/12.jpg);">
     <div class="container">
         <div class="title-text">
-            <h1>Types of mental health problems</h1>
+            <h1>AWARENESS</h1>
             <ul class="title-menu clearfix">
-                <li>If you've been diagnosed with a mental health problem you might be looking for information on your diagnosis, treatment options and where to go for support. Our awareness pages will help you learn more.
-
+                <li>
+                    <a href="index.html">home &nbsp;/</a>
                 </li>
+                <li>awareness</li>
             </ul>
         </div>
     </div>
@@ -150,7 +152,7 @@ WEBSITE: https://themefisher.com
   <div class="container">
     <div class="row">
       <div class="col-lg-9">
-        <div class="left-side">
+        <div class="left-side" style="height: 50rem; overflow-y: scroll;">
           <div class="item-holder">
             <div class="image-box">
               <figure>
@@ -159,7 +161,7 @@ WEBSITE: https://themefisher.com
             </div>
             <div class="content-text">
               <a th:href="@{/aware1}">
-                <h2>Obsessive-compulsive disorder (OCD)</h2>        
+                <h4>Obsessive-compulsive disorder (OCD)</h4>
               </a>
               <span>- Obsessive-compulsive disorder (OCD) has two main parts: obsessions and compulsions.</span>
               <ul>
@@ -184,7 +186,7 @@ WEBSITE: https://themefisher.com
             </div>
             <div class="content-text">
                 <a th:href="@{/aware2}">
-                <h2>Personality disorders</h2>
+                <h4>Personality disorders</h4>
               </a>
               <span>What are personality disorders?</span>
               <p>Our personality is the collection of thoughts, feelings and behaviours that makes each of us the individuals we are.
@@ -201,7 +203,7 @@ WEBSITE: https://themefisher.com
 
                 - The way you think, feel and behave causes you significant problems in daily life. For example, you may feel unable to trust others or you may often feel abandoned, causing you or others distress in day-to-day relationships.<br>
                 - You experience these problems across different aspects of your life. For example, you may struggle to start or keep friendships, to control your feelings and behaviour, or get on with people. There may be an intensity to your emotions that makes them feel frightening and overwhelming sometimes.<br>
-                
+
               </p>
               <div class="link-btn">
                 <a th:href="@{/aware2}" class="btn-style-one">read more</a>
@@ -216,12 +218,12 @@ WEBSITE: https://themefisher.com
             </div>
             <div class="content-text">
                 <a th:href="@{/aware3}">
-                <h2>paranoia</h2>
+                <h4>paranoia</h4>
               </a>
               <span>What is paranoia</span>
               <p>Paranoia is thinking and feeling like you are being threatened in some way,
-                 even if there is no evidence, or very little evidence, that you are. 
-                 Paranoid thoughts can also be described as delusions. 
+                 even if there is no evidence, or very little evidence, that you are.
+                 Paranoid thoughts can also be described as delusions.
                 There are lots of different kinds of threat you might be scared and worried about.
               </p>
               <span>What kind of things can you be paranoid about?</span>
@@ -233,7 +235,7 @@ WEBSITE: https://themefisher.com
                - people are using hints and double meanings to secretly threaten you or make you feel bad<br>
 
               </p>
-            
+
               <div class="link-btn">
                 <a th:href="@{/aware3}" class="btn-style-one">read more</a>
               </div>
@@ -247,12 +249,12 @@ WEBSITE: https://themefisher.com
             </div>
             <div class="content-text">
                 <a th:href="@{/aware4}">
-                <h2>Anxiety and panic attacks</h2>
+                <h4>Anxiety and panic attacks</h4>
               </a>
               <span>What is a Anxiety?</span>
               <p>Anxiety is what we feel when we are worried, tense or afraid – particularly about things that are about to happen, or which we think could happen in the future.
                 a pellentesque nec, egestas non nisi. Vivamus suscipit tortor eget felis porttitor volutpat.</p>
-               
+
                 <span>What is a Anxiety?</span>
               <p>Panic attacks are a type of fear response. Theyre an exaggeration of your bodys normal response to danger, stress or excitement. .</p>
               <div class="link-btn">
@@ -261,9 +263,9 @@ WEBSITE: https://themefisher.com
             </div>
           </div>
 
-          
+
           <div class="styled-pagination">
-              <li><a ><span></span></a></li>     
+              <li><a ><span></span></a></li>
           </div>
         </div>
       </div>
@@ -283,25 +285,25 @@ WEBSITE: https://themefisher.com
           <div class="categorise-menu">
             <div class="text-title">
               <h5>More Information</h5><br>
-              <h6>Videos</h6>
+              <h6>External Videos</h6>
             </div>
             <ul class="categorise-list">
-              <li><a href="https://www.youtube.com/watch?v=I8Jofzx_8p4">OCD </a></li>
-              <li><a href="https://www.youtube.com/watch?v=BQfKhwmlSVM">Anger </a></li>
-              <li><a href="https://www.youtube.com/watch?v=IzFObkVRSV0">Panic Attaks </a></li>
-              <li><a href="https://www.youtube.com/watch?v=3BdOHdnnOgs">Paranoia </a></li>
-              <li><a href="https://www.youtube.com/watch?v=_ZFFZpKO0l0">Abuse </a></li>
-              
+              <li><a href="https://www.youtube.com/watch?v=I8Jofzx_8p4">▶️ OCD </a></li>
+              <li><a href="https://www.youtube.com/watch?v=BQfKhwmlSVM">▶️ Anger </a></li>
+              <li><a href="https://www.youtube.com/watch?v=IzFObkVRSV0">▶️ Panic Attaks </a></li>
+              <li><a href="https://www.youtube.com/watch?v=3BdOHdnnOgs">▶️ Paranoia </a></li>
+              <li><a href="https://www.youtube.com/watch?v=_ZFFZpKO0l0">▶️ Abuse </a></li>
+
             </ul>
           </div>
           <div class="tag-list">
             <div class="text-title">
               <h6>Stay Aware - Books</h6>
             </div>
-            <a href="https://churchofscientologymissionofbrandblvd.org/product/dianetics-the-modern-science-of-mental-health/?gclid=Cj0KCQjwsZKJBhC0ARIsAJ96n3WzJMDvWGcQkngw-MlJXkLM64vuH7T5H-RIX3lizQQikSGShHZ0Y5YaAjNVEALw_wcB"> Modern Science-Mental Health</a>
-            <a href="https://www.mea.elsevierhealth.com/physiotherapy-in-mental-health-and-psychiatry-9780702072680.html?gclid=Cj0KCQjwsZKJBhC0ARIsAJ96n3VhZB_vMmXwhRGjdSpE4_QBVHAtpi0Un7bmAn1l6w0Eh1qiao4XZj0aAifzEALw_wcB&gclsrc=aw.ds">Physiotherapy in Mental Health</a>
-            <a href="https://www.mea.elsevierhealth.com/stories-in-mental-health-9780729540971.html?gclid=Cj0KCQjwsZKJBhC0ARIsAJ96n3UQFuM39AxwK2ikVBvku_c49ulFsYjipV87VwXlsIFUe-gwiEG1hbcaAiZlEALw_wcB&gclsrc=aw.ds">Stories in Mental Health,st1</a>
-            <a href="https://www.dna.jo/products/connections-the-story-of-human-feeling?variant=39483170455684&currency=JOD&utm_medium=product_sync&utm_source=google&utm_content=sag_organic&utm_campaign=sag_organic&utm_campaign=gs-2021-02-16&utm_source=google&utm_medium=smart_campaign&gclid=Cj0KCQjwsZKJBhC0ARIsAJ96n3XtE_4kDqNTEg5xmRtKwofv2vuywx4Q1xJKvQzo4Zj5rfpEhNJPZLwaArc9EALw_wcB">The Story Of Human Feeling</a>
+            <a style="border:none" href="https://churchofscientologymissionofbrandblvd.org/product/dianetics-the-modern-science-of-mental-health/?gclid=Cj0KCQjwsZKJBhC0ARIsAJ96n3WzJMDvWGcQkngw-MlJXkLM64vuH7T5H-RIX3lizQQikSGShHZ0Y5YaAjNVEALw_wcB">- Modern Science-Mental Health</a>
+            <a style="border:none" href="https://www.mea.elsevierhealth.com/physiotherapy-in-mental-health-and-psychiatry-9780702072680.html?gclid=Cj0KCQjwsZKJBhC0ARIsAJ96n3VhZB_vMmXwhRGjdSpE4_QBVHAtpi0Un7bmAn1l6w0Eh1qiao4XZj0aAifzEALw_wcB&gclsrc=aw.ds">- Physiotherapy in Mental Health</a>
+            <a style="border:none" href="https://www.mea.elsevierhealth.com/stories-in-mental-health-9780729540971.html?gclid=Cj0KCQjwsZKJBhC0ARIsAJ96n3UQFuM39AxwK2ikVBvku_c49ulFsYjipV87VwXlsIFUe-gwiEG1hbcaAiZlEALw_wcB&gclsrc=aw.ds">- Stories in Mental Health,st1</a>
+            <a style="border:none" href="https://www.dna.jo/products/connections-the-story-of-human-feeling?variant=39483170455684&currency=JOD&utm_medium=product_sync&utm_source=google&utm_content=sag_organic&utm_campaign=sag_organic&utm_campaign=gs-2021-02-16&utm_source=google&utm_medium=smart_campaign&gclid=Cj0KCQjwsZKJBhC0ARIsAJ96n3XtE_4kDqNTEg5xmRtKwofv2vuywx4Q1xJKvQzo4Zj5rfpEhNJPZLwaArc9EALw_wcB">- The Story Of Human Feeling</a>
             <!-- <a href="blog.html">Surgery</a>
             <a href="blog.html">Doctor</a>
             <a href="blog.html">Pediatric</a> -->
@@ -318,7 +320,7 @@ WEBSITE: https://themefisher.com
           <div class="footer-top">
               <div class="container">
                   <div class="row justify-content-between">
-                      <div class="col-lg-4 mb-5 mb-lg-0">
+                      <div class="col-lg-5 mb-5 mb-lg-0">
                           <div class="about-widget">
                               <div class="footer-logo">
                                   <h2>Lighthouse E-Clinic</h2>
@@ -328,7 +330,7 @@ WEBSITE: https://themefisher.com
                                     </a>
                                   </figure> -->
                               </div>
-                              <p>Lighthouse E-Clinic is a new and innovative online system that delivers clinical services to people experiencing mental health problems. The makes clinical care free and accessible to people wherever and whenever they need it.</p>
+                              <p style="width:90%">Lighthouse E-Clinic is a new and innovative online system that delivers clinical services to people experiencing mental health problems. The makes clinical care free and accessible to people wherever and whenever they need it.</p>
                               <ul class="location-link">
 
                                   <li class="item">
@@ -359,7 +361,7 @@ WEBSITE: https://themefisher.com
                           </div>
                       </div>
                       <!--                    ToDo: Edit links-->
-                      <div class="col-lg-3 col-md-5 mb-3 mb-md-0">
+                      <div class="col-lg-2 col-md-5 mb-3 mb-md-0">
                           <h2>QUICK LINKS</h2>
                           <ul class="menu-link">
                               <li>
