--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -140,7 +140,9 @@
 
                 <div class="col-lg-5 col-xs-12 text-center" data-toggle="modal" data-target="#modalSocial">
                     <div class="box">
-                        <img style="width:42%;" loading="lazy" src="https://www.pngall.com/wp-content/uploads/5/Profile-PNG-Free-Download.png" alt="post-thumb">
+                        <img style="width:42%;" loading="lazy"
+                             src="https://www.pngall.com/wp-content/uploads/5/Profile-PNG-Free-Download.png"
+                             alt="post-thumb">
                         <div class="box-text">
                             <span>stay aware and take care about your mental health</span>
                         </div>
@@ -156,7 +158,9 @@
                 <div class="col-lg-5 col-xs-12 text-center" data-toggle="modal"
                      data-target="#modalRegisterForm">
                     <div class="box">
-                        <img style="width:30%;" loading="lazy" src="https://healthwayhospitals.com/wp-content/uploads/2019/03/doctor-icon-png-7.png" alt="post-thumb">
+                        <img style="width:30%;" loading="lazy"
+                             src="https://healthwayhospitals.com/wp-content/uploads/2019/03/doctor-icon-png-7.png"
+                             alt="post-thumb">
                         <div class="box-title">
                         </div>
                         <div class="box-text">
@@ -188,47 +192,44 @@
                 <div class="modal-body mx-3">
                     <div class="container rounded bg-white mt-5 mb-5">
                         <div class="row">
-                            <form action="/signupTherapists" method="post"
-                                  class="col-md-12 border-right">
-                                <div class="p-3 py-5" style="padding-top:0px; padding-right:0px;">
-                                    <div class="row mt-2">
-                                        <div class="col-md-6"><label class="labels">User Name</label><input
-                                                id="username1" name="username" type="text" class="form-control"
-                                                required></div>
-                                        <div class="col-md-6"><label class="labels">Password</label><input
-                                                id="password1" name="password" type="password" class="form-control"
-                                                required></div>
-                                        <div class="col-md-6"><label class="labels">First name</label><input
-                                                id="firstname1" name="firstname" type="text" class="form-control"
-                                                required></div>
-                                        <div class="col-md-6"><label class="labels">Last name</label><input
-                                                id="lastname1" name="lastname" type="text" class="form-control"
-                                                required></div>
-                                    </div>
-                                    <div class="col-md-12"><label class="labels">Specialties</label><input
-                                            type="text" name="specializedIn"
-                                            class="form-control"
+                            <form action="/signupTherapists" method="post" class="col-md-12">
+                                <div class="row mt-2">
+                                    <div class="col-md-6"><label class="labels">User Name</label><input
+                                            id="username1" name="username" type="text" class="form-control"
                                             required></div>
-                                    <div class="col-md-12"><label class="labels">Experiences</label><input
-                                            type="text" class="form-control" name="experiences"
+                                    <div class="col-md-6"><label class="labels">Password</label><input
+                                            id="password1" name="password" type="password" class="form-control"
                                             required></div>
-                                    <div class="row mt-3">
-                                        <div class="col-md-6"><label class="labels">Date Of Birth</label><input
-                                                id="dateOfBirth1" name="dateOfBirth" type="date" max="2005-01-01"
-                                                class="form-control" required></div>
-                                        <div class="col-md-6"><label class="labels">Upload image</label><input
-                                                id="image1" name="image" type="text" class="form-control"
-                                                required></div>
-                                        <div class="col-md-6"><label class="labels">Country</label><input
-                                                type="text" id="country1" name="country"
-                                                class="form-control" required></div>
-                                        <div class="col-md-6"><label class="labels">Number of sessions</label><input
-                                                type="number" min="1" th:value="1" name="numOfSessions"
-                                                class="form-control" required></div>
-                                    </div>
-                                    <div class="mt-5 text-center">
-                                        <button type="submit" class="btn btn-info">Sign-Up</button>
-                                    </div>
+                                    <div class="col-md-6"><label class="labels">First name</label><input
+                                            id="firstname1" name="firstname" type="text" class="form-control"
+                                            required></div>
+                                    <div class="col-md-6"><label class="labels">Last name</label><input
+                                            id="lastname1" name="lastname" type="text" class="form-control"
+                                            required></div>
+                                </div>
+                                <div class="col-md-12"><label class="labels">Specialties</label><input
+                                        type="text" name="specializedIn"
+                                        class="form-control"
+                                        required></div>
+                                <div class="col-md-12"><label class="labels">Experiences</label><input
+                                        type="text" class="form-control" name="experiences"
+                                        required></div>
+                                <div class="row mt-2">
+                                    <div class="col-md-6"><label class="labels">Date Of Birth</label><input
+                                            id="dateOfBirth1" name="dateOfBirth" type="date" max="2005-01-01"
+                                            class="form-control" required></div>
+                                    <div class="col-md-6"><label class="labels">Upload image</label><input
+                                            id="image1" name="image" type="text" class="form-control"
+                                            required></div>
+                                    <div class="col-md-6"><label class="labels">Country</label><input
+                                            type="text" id="country1" name="country"
+                                            class="form-control" required></div>
+                                    <div class="col-md-6"><label class="labels">Number of sessions</label><input
+                                            type="number" min="1" th:value="1" name="numOfSessions"
+                                            class="form-control" required></div>
+                                </div>
+                                <div class="mt-5 text-center">
+                                    <button type="submit" class="btn btn-info">Sign-Up</button>
                                 </div>
                             </form>
                         </div>
@@ -238,7 +239,6 @@
         </div>
     </div>
 </div>
-
 
 
 <div class="modal fade" id="modalSocial" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
@@ -251,37 +251,32 @@
                         aria-hidden="true">&times;</span></button>
             </div>
             <div class="modal-body mb-0 text-center">
-                <form form action="/signupUser"  method="post"
-                      class="col-md-12 border-right">
-                    <div class="p-3 py-5" style="padding-top:0px; padding-right:0px;">
-                            <div class="col-md-12"><label class="labels">User Name</label><input
-                                    id="username" name="username" type="text" class="form-control"
-                                    required></div>
-                            <div class="col-md-12"><label class="labels">Password</label><input
-                                    id="password" name="password" type="password" class="form-control"
-                                    required></div>
-                        <div class="row mt-2">
-                            <div class="col-md-6"><label class="labels">First name</label><input
-                                    id="firstname" name="firstname" type="text" class="form-control"
-                                    required></div>
-                            <div class="col-md-6"><label class="labels">Last name</label><input
-                                    id="lastname" name="lastname" type="text" class="form-control"
-                                    required></div>
-                        </div>
-                        <div class="row mt-3">
-                            <div class="col-md-6"><label class="labels">Date Of Birth</label><input
-                                    id="dateOfBirth" name="dateOfBirth" type="date" max="2005-01-01"
-                                    class="form-control" required></div>
-                            <div class="col-md-6"><label class="labels">Upload image</label><input
-                                    id="image" name="image" type="text" class="form-control"
-                                    required></div>
-                            <div class="col-md-6"><label class="labels">Country</label><input
-                                    type="text" id="country" name="country"
-                                    class="form-control" required></div>
-                        </div>
-                        <div class="mt-5 text-center">
-                            <button type="submit" class="btn btn-info">Sign-Up</button>
-                        </div>
+                <form form action="/signupUser" method="post" class="col-md-12 ">
+                    <div class="col-md-12"><label class="labels">User Name</label><input
+                            id="username" name="username" type="text" class="form-control"
+                            required></div>
+                    <div class="col-md-12"><label class="labels">Password</label><input
+                            id="password" name="password" type="password" class="form-control"
+                            required></div>
+                    <div class="row mt-2">
+                        <div class="col-md-6"><label class="labels">First name</label><input
+                                id="firstname" name="firstname" type="text" class="form-control"
+                                required></div>
+                        <div class="col-md-6"><label class="labels">Last name</label><input
+                                id="lastname" name="lastname" type="text" class="form-control"
+                                required></div>
+                        <div class="col-md-6"><label class="labels">Date Of Birth</label><input
+                                id="dateOfBirth" name="dateOfBirth" type="date" max="2005-01-01"
+                                class="form-control" required></div>
+                        <div class="col-md-6"><label class="labels">Upload image</label><input
+                                id="image" name="image" type="text" class="form-control"
+                                required></div>
+                        <div class="col-md-6" style="margin: auto;"><label class="labels">Country</label><input
+                                type="text" id="country" name="country"
+                                class="form-control" required></div>
+                    </div>
+                    <div class="mt-5 text-center">
+                        <button type="submit" class="btn btn-info">Sign-Up</button>
                     </div>
                 </form>
             </div>
@@ -296,7 +291,7 @@
     <div class="footer-top">
         <div class="container">
             <div class="row justify-content-between">
-                <div class="col-lg-4 mb-5 mb-lg-0">
+                <div class="col-lg-5 mb-5 mb-lg-0">
                     <div class="about-widget">
                         <div class="footer-logo">
                             <h2>Lighthouse E-Clinic</h2>
@@ -306,9 +301,7 @@
                               </a>
                             </figure> -->
                         </div>
-                        <p>Lighthouse E-Clinic is a new and innovative online system that delivers clinical services to
-                            people experiencing mental health problems. The makes clinical care free and accessible to
-                            people wherever and whenever they need it.</p>
+                        <p style="width:90%">Lighthouse E-Clinic is a new and innovative online system that delivers clinical services to people experiencing mental health problems. The makes clinical care free and accessible to people wherever and whenever they need it.</p>
                         <ul class="location-link">
 
                             <li class="item">
@@ -323,27 +316,23 @@
                             </li>
                         </ul>
                         <ul class="list-inline social-icons">
-                            <li class="list-inline-item"><a
-                                    href="https://github.com/Mental-HealthCare/Mental-HealthCare"
-                                    aria-label="facebook"><i class="fab fa-facebook-f"></i></a>
+                            <li class="list-inline-item"><a href="https://github.com/Mental-HealthCare/Mental-HealthCare"
+                                                            aria-label="facebook"><i class="fab fa-facebook-f"></i></a>
                             </li>
-                            <li class="list-inline-item"><a
-                                    href="https://github.com/Mental-HealthCare/Mental-HealthCare"
-                                    aria-label="twitter"><i class="fab fa-twitter"></i></a>
+                            <li class="list-inline-item"><a href="https://github.com/Mental-HealthCare/Mental-HealthCare"
+                                                            aria-label="twitter"><i class="fab fa-twitter"></i></a>
                             </li>
-                            <li class="list-inline-item"><a
-                                    href="https://github.com/Mental-HealthCare/Mental-HealthCare"
-                                    aria-label="instagram"><i class="fab fa-instagram"></i></a>
+                            <li class="list-inline-item"><a href="https://github.com/Mental-HealthCare/Mental-HealthCare"
+                                                            aria-label="instagram"><i class="fab fa-instagram"></i></a>
                             </li>
-                            <li class="list-inline-item"><a
-                                    href="https://github.com/Mental-HealthCare/Mental-HealthCare"
-                                    aria-label="github"><i class="fab fa-github"></i></a>
+                            <li class="list-inline-item"><a href="https://github.com/Mental-HealthCare/Mental-HealthCare"
+                                                            aria-label="github"><i class="fab fa-github"></i></a>
                             </li>
                         </ul>
                     </div>
                 </div>
                 <!--                    ToDo: Edit links-->
-                <div class="col-lg-3 col-md-5 mb-3 mb-md-0">
+                <div class="col-lg-2 col-md-5 mb-3 mb-md-0">
                     <h2>QUICK LINKS</h2>
                     <ul class="menu-link">
                         <li>
@@ -379,8 +368,7 @@
                                     </div>
                                     <div class="media-body">
                                         <h5><a th:href="@{/aware2}">Personality disorders</a></h5>
-                                        <p>Our personality is the collection of thoughts, feelings and behaviours that
-                                            makes each of us the individuals we are.</p>
+                                        <p>Our personality is the collection of thoughts, feelings and behaviours that makes each of us the individuals we are.</p>
                                     </div>
                                 </div>
                             </li>
@@ -394,8 +382,7 @@
                                     </div>
                                     <div class="media-body">
                                         <h5><a th:href="@{/aware1}">Obsessive-compulsive disorder (OCD)</a></h5>
-                                        <p>Obsessions are unwelcome thoughts, images, urges, worries or doubts that
-                                            repeatedly appear in your mind.</p>
+                                        <p>Obsessions are unwelcome thoughts, images, urges, worries or doubts that repeatedly appear in your mind.</p>
                                     </div>
                                 </div>
                             </li>
