--- a/src/main/resources/static/css/chat.css
+++ b/src/main/resources/static/css/chat.css
@@ -162,24 +162,30 @@ background-color:#ffffff !important;
 		margin-top: auto;
 		margin-bottom: auto;
 		margin-left: 10px;
-		border-radius: 25px;
+		border-radius: 20px;
 		background-color: #48bdc5;
 		color:#ffffff;
 		padding: 10px;
 		position: relative;
-		    min-width: 150px;
+width: fit-content;
+max-width: 100%;
+margin-left: 0;
+margin-right: auto;
+
 	}
 	.msg_cotainer_send{
 		margin-top: auto;
 		margin-bottom: auto;
 		margin-right: 10px;
-		border-radius: 25px;
+		border-radius: 20px;
 		background-color: #8e8e8e;
 		color:#ffffff;
 		padding: 10px;
 		position: relative;
-				    min-width: 150px;
-
+width: fit-content;
+max-width: 100%;
+margin-left: auto;
+margin-right: 0;
 	}
 	.msg_time{
 		position: absolute;
@@ -240,3 +246,12 @@ background-color:#ffffff !important;
 		margin-bottom: 15px !important;
 	}
 	}
+
+	::-webkit-scrollbar {
+        width: 0;  /* Remove scrollbar space */
+        background: transparent;  /* Optional: just make scrollbar invisible */
+    }
+    /* Optional: show position indicator in red */
+    ::-webkit-scrollbar-thumb {
+        background: #FF0000;
+    }
