--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -480,7 +480,7 @@ WEBSITE: https://themefisher.com
                 </figure>
               </div>
               <!-- <h6>Louise </h6> -->
-              <p class="mb-0"> "For me, anxiety feels as if everyone in the world is waiting for me to trip up, so that they can laugh at me. It makes me feel nervous and unsure whether the next step I take is the best way forward." </p>
+              <p class="mb-0"> <b>&#8223;</b> For me, anxiety feels as if everyone in the world is waiting for me to trip up, so that they can laugh at me. It makes me feel nervous and unsure whether the next step I take is the best way forward. <b>&#8221;</b></p>
             </div>
           </div>
           <!--Slide Item-->
@@ -492,8 +492,8 @@ WEBSITE: https://themefisher.com
                 </figure>
               </div>
               <!-- <h6>David Warner</h6> -->
-              <p class="mb-0"> "It's an emotional amplifier: when my mood is high I feel far quicker, funnier, smarter and livelier than anyone; when my mood is low I take on the suffering of the whole world."
-              </p>
+              <p class="mb-0"><b>&#8223;</b> It's an emotional amplifier: when my mood is high I feel far quicker, funnier, smarter and livelier than anyone; when my mood is low I take on the suffering of the whole world.
+              <b>&#8221;</b></p>
             </div>
           </div>
           <!--Slide Item-->
@@ -505,7 +505,7 @@ WEBSITE: https://themefisher.com
                 </figure>
               </div>
               <!-- <h6>Amy Adams</h6> -->
-              <p class="mb-0">"It feels like there's a ball of fire in the middle of my chest that blurts its way straight out of my mouth and burns the people around me."</p>
+              <p class="mb-0"><b>&#8223;</b> It feels like there's a ball of fire in the middle of my chest that blurts its way straight out of my mouth and burns the people around me.<b>&#8221;</b></p>
             </div>
           </div>
           <!--Slide Item-->
@@ -517,8 +517,8 @@ WEBSITE: https://themefisher.com
                 </figure>
               </div>
               <!-- <h6>Adam Rose</h6> -->
-              <p class="mb-0">"It starts as sadness then I feel myself shutting down, becoming less capable of coping. Eventually, I just feel numb and empty."
-              </p>
+              <p class="mb-0"><b>&#8223;</b> It starts as sadness then I feel myself shutting down, becoming less capable of coping. Eventually, I just feel numb and empty.
+              <b>&#8221;</b></p>
             </div>
           </div>
           <!--Slide Item-->
@@ -530,7 +530,7 @@ WEBSITE: https://themefisher.com
                 </figure>
               </div>
               <!-- <h6>David Warner</h6> -->
-              <p class="mb-0">"Everything in the world hurts more than it seems to for everyone else and any 'thick skin' [I am] supposed to have just isn't there."</p>
+              <p class="mb-0"><b>&#8223;</b> Everything in the world hurts more than it seems to for everyone else and any 'thick skin' [I am] supposed to have just isn't there. <b>&#8221;</b></p>
             </div>
           </div>
           <!--Slide Item-->
@@ -542,8 +542,8 @@ WEBSITE: https://themefisher.com
                 </figure>
               </div>
               <!-- <h6>Amy Adams</h6> -->
-              <p class="mb-0">"I felt like my body didn't belong to me, it was like I was an outsider watching my own story unfold."
-              </p>
+              <p class="mb-0"><b>&#8223;</b> I felt like my body didn't belong to me, it was like I was an outsider watching my own story unfold.
+              <b>&#8221;</b></p>
             </div>
           </div>
           <!--Slide Item-->
@@ -555,8 +555,8 @@ WEBSITE: https://themefisher.com
                 </figure>
               </div>
               <!-- <h6>Adam Rose</h6> -->
-              <p class="mb-0">"All my experiences with recreational drug use started due to social influences, of wanting to 'fit in'."
-              </p>
+              <p class="mb-0"><b>&#8223;</b> All my experiences with recreational drug use started due to social influences, of wanting to 'fit in'.
+              <b>&#8221;</b></p>
             </div>
           </div>
           <!--Slide Item-->
@@ -568,8 +568,8 @@ WEBSITE: https://themefisher.com
                 </figure>
               </div>
               <!-- <h6>David Warner</h6> -->
-              <p class="mb-0">"I hear hundreds of voices. Partly relatives, friends and people in the media."
-              </p>
+              <p class="mb-0"><b>&#8223;</b> I hear hundreds of voices. Partly relatives, friends and people in the media.
+              <b>&#8221;</b></p>
             </div>
           </div>
           <!--Slide Item-->
@@ -581,8 +581,8 @@ WEBSITE: https://themefisher.com
                 </figure>
               </div>
               <!-- <h6>Amy Adams</h6> -->
-              <p class="mb-0">"I find it really hard to trust people as my head tells me they're out to get me."
-              </p>
+              <p class="mb-0"><b>&#8223;</b> I find it really hard to trust people as my head tells me they're out to get me.
+              <b>&#8221;</b></p>
             </div>
           </div>
         </div>
@@ -591,132 +591,132 @@ WEBSITE: https://themefisher.com
   </div>
 </section>
 
- <!--footer-main-->
- <footer class="footer-main">
-  <div class="footer-top">
-      <div class="container">
+    <!--footer-main-->
+    <footer class="footer-main">
+      <div class="footer-top">
+        <div class="container">
           <div class="row justify-content-between">
-              <div class="col-lg-4 mb-5 mb-lg-0">
-                  <div class="about-widget">
-                      <div class="footer-logo">
-                          <h2>Lighthouse E-Clinic</h2>
-                          <!-- <figure>
-                            <a href="index.html">
-                              <img loading="lazy" class="img-fluid" src="images/eee.png" alt="medic" >
-                            </a>
-                          </figure> -->
+            <div class="col-lg-5 mb-5 mb-lg-0">
+              <div class="about-widget">
+                <div class="footer-logo">
+                  <h2>Lighthouse E-Clinic</h2>
+                  <!-- <figure>
+                    <a href="index.html">
+                      <img loading="lazy" class="img-fluid" src="images/eee.png" alt="medic" >
+                    </a>
+                  </figure> -->
+                </div>
+                <p style="width:90%">Lighthouse E-Clinic is a new and innovative online system that delivers clinical services to people experiencing mental health problems. The makes clinical care free and accessible to people wherever and whenever they need it.</p>
+                <ul class="location-link">
+
+                  <li class="item">
+                    <i class="far fa-envelope" aria-hidden="true"></i>
+                    <a href="mailto:support@medic.com">
+                      <p>support@lighthouse.com</p>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <i class="fas fa-phone" aria-hidden="true"></i>
+                    <p>(+962) 123 4567</p>
+                  </li>
+                </ul>
+                <ul class="list-inline social-icons">
+                  <li class="list-inline-item"><a href="https://github.com/Mental-HealthCare/Mental-HealthCare"
+                                                  aria-label="facebook"><i class="fab fa-facebook-f"></i></a>
+                  </li>
+                  <li class="list-inline-item"><a href="https://github.com/Mental-HealthCare/Mental-HealthCare"
+                                                  aria-label="twitter"><i class="fab fa-twitter"></i></a>
+                  </li>
+                  <li class="list-inline-item"><a href="https://github.com/Mental-HealthCare/Mental-HealthCare"
+                                                  aria-label="instagram"><i class="fab fa-instagram"></i></a>
+                  </li>
+                  <li class="list-inline-item"><a href="https://github.com/Mental-HealthCare/Mental-HealthCare"
+                                                  aria-label="github"><i class="fab fa-github"></i></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <!--                    ToDo: Edit links-->
+            <div class="col-lg-2 col-md-5 mb-3 mb-md-0">
+              <h2>QUICK LINKS</h2>
+              <ul class="menu-link">
+                <li>
+                  <a th:href="@{/}">
+                    <i class="fa fa-angle-right" aria-hidden="true"></i>Home</a>
+                </li>
+                <li>
+                  <a th:href="@{/aware}">
+                    <i class="fa fa-angle-right" aria-hidden="true"></i>Awareness</a>
+                </li>
+                <li>
+                  <a th:href="@{/allTherapists}">
+                    <i class="fa fa-angle-right" aria-hidden="true"></i>Therapists</a>
+                </li>
+                <li>
+                  <a th:href="@{/about}">
+                    <i class="fa fa-angle-right" aria-hidden="true"></i>About Us</a>
+                </li>
+
+              </ul>
+            </div>
+            <div class="col-lg-4 col-md-7">
+              <div class="social-links">
+                <h2>Recent Posts</h2>
+                <ul>
+                  <li class="item">
+                    <div class="media">
+                      <div class="media-left mr-3">
+                        <a th:href="@{/aware2}">
+                          <img loading="lazy" src="images/blog/15.jpg"
+                               alt="post-thumb">
+                        </a>
                       </div>
-                      <p>Lighthouse E-Clinic is a new and innovative online system that delivers clinical services to people experiencing mental health problems. The makes clinical care free and accessible to people wherever and whenever they need it.</p>
-                      <ul class="location-link">
-
-                          <li class="item">
-                              <i class="far fa-envelope" aria-hidden="true"></i>
-                              <a href="mailto:support@medic.com">
-                                  <p>support@lighthouse.com</p>
-                              </a>
-                          </li>
-                          <li class="item">
-                              <i class="fas fa-phone" aria-hidden="true"></i>
-                              <p>(+962) 123 4567</p>
-                          </li>
-                      </ul>
-                      <ul class="list-inline social-icons">
-                          <li class="list-inline-item"><a href="https://github.com/Mental-HealthCare/Mental-HealthCare"
-                                                          aria-label="facebook"><i class="fab fa-facebook-f"></i></a>
-                          </li>
-                          <li class="list-inline-item"><a href="https://github.com/Mental-HealthCare/Mental-HealthCare"
-                                                          aria-label="twitter"><i class="fab fa-twitter"></i></a>
-                          </li>
-                          <li class="list-inline-item"><a href="https://github.com/Mental-HealthCare/Mental-HealthCare"
-                                                          aria-label="instagram"><i class="fab fa-instagram"></i></a>
-                          </li>
-                          <li class="list-inline-item"><a href="https://github.com/Mental-HealthCare/Mental-HealthCare"
-                                                          aria-label="github"><i class="fab fa-github"></i></a>
-                          </li>
-                      </ul>
-                  </div>
+                      <div class="media-body">
+                        <h5><a th:href="@{/aware2}">Personality disorders</a></h5>
+                        <p>Our personality is the collection of thoughts, feelings and behaviours that makes each of us the individuals we are.</p>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="item">
+                    <div class="media">
+                      <div class="media-left mr-3">
+                        <a th:href="@{/aware1}">
+                          <img loading="lazy" src="images/blog/19.jpg"
+                               alt="post-thumb">
+                        </a>
+                      </div>
+                      <div class="media-body">
+                        <h5><a th:href="@{/aware1}">Obsessive-compulsive disorder (OCD)</a></h5>
+                        <p>Obsessions are unwelcome thoughts, images, urges, worries or doubts that repeatedly appear in your mind.</p>
+                      </div>
+                    </div>
+                  </li>
+                </ul>
               </div>
-<!--                    ToDo: Edit links-->
-              <div class="col-lg-3 col-md-5 mb-3 mb-md-0">
-                  <h2>QUICK LINKS</h2>
-                  <ul class="menu-link">
-                    <li>
-                      <a th:href="@{/}">
-                        <i class="fa fa-angle-right" aria-hidden="true"></i>Home</a>
-                    </li>
-                    <li>
-                      <a th:href="@{/aware}">
-                        <i class="fa fa-angle-right" aria-hidden="true"></i>Awareness</a>
-                    </li>
-                      <li>
-                          <a th:href="@{/allTherapists}">
-                              <i class="fa fa-angle-right" aria-hidden="true"></i>Therapists</a>
-                      </li>
-                      <li>
-                          <a th:href="@{/about}">
-                              <i class="fa fa-angle-right" aria-hidden="true"></i>About Us</a>
-                      </li>
-
-                  </ul>
-              </div>
-              <div class="col-lg-4 col-md-7">
-                  <div class="social-links">
-                      <h2>Recent Posts</h2>
-                      <ul>
-                          <li class="item">
-                              <div class="media">
-                                  <div class="media-left mr-3">
-                                      <a th:href="@{/aware2}">
-                                          <img loading="lazy" src="images/blog/15.jpg"
-                                               alt="post-thumb">
-                                      </a>
-                                  </div>
-                                  <div class="media-body">
-                                      <h5><a th:href="@{/aware2}">Personality disorders</a></h5>
-                                      <p>Our personality is the collection of thoughts, feelings and behaviours that makes each of us the individuals we are.</p>
-                                  </div>
-                              </div>
-                          </li>
-                          <li class="item">
-                              <div class="media">
-                                  <div class="media-left mr-3">
-                                      <a th:href="@{/aware1}">
-                                          <img loading="lazy" src="images/blog/19.jpg"
-                                               alt="post-thumb">
-                                      </a>
-                                  </div>
-                                  <div class="media-body">
-                                      <h5><a th:href="@{/aware1}">Obsessive-compulsive disorder (OCD)</a></h5>
-                                      <p>Obsessions are unwelcome thoughts, images, urges, worries or doubts that repeatedly appear in your mind.</p>
-                                  </div>
-                              </div>
-                          </li>
-                      </ul>
-                  </div>
-              </div>
+            </div>
           </div>
+        </div>
       </div>
-  </div>
-  <div class="footer-bottom">
-      <div class="container clearfix">
+      <div class="footer-bottom">
+        <div class="container clearfix">
           <div class="copyright-text">
-              <p>&copy; Copyright 2021. by <a
-                      href="https://github.com/Mental-HealthCare/Mental-HealthCare">Mental Health Clinic Team</a></p>
+            <p>&copy; Copyright 2021. by <a
+                    href="https://github.com/Mental-HealthCare/Mental-HealthCare">Mental Health Clinic Team</a></p>
           </div>
           <ul class="footer-bottom-link">
-              <li>
-                  <a href="index.html">Home</a>
-              </li>
-              <li>
-                  <a href="about.html">About</a>
-              </li>
-              <li>
-                  <a href="https://github.com/Mental-HealthCare/Mental-HealthCare">Contact</a>
-              </li>
+            <li>
+              <a href="index.html">Home</a>
+            </li>
+            <li>
+              <a href="about.html">About</a>
+            </li>
+            <li>
+              <a href="https://github.com/Mental-HealthCare/Mental-HealthCare">Contact</a>
+            </li>
           </ul>
+        </div>
       </div>
-  </div>
-</footer>
+    </footer>
 
 <!-- scroll-to-top -->
 <div id="back-to-top" class="back-to-top">
