--- a/src/main/resources/templates/myProfile.html
+++ b/src/main/resources/templates/myProfile.html
@@ -189,15 +189,14 @@
                                                           th:action="@{/DeleteOneConsultation/{id}(id=${oneConsultation.getId()})}"
                                                           method="post">
                                                         <button type="submit" class="btn btn-outline-danger"
-                                                                style="width: 40%; margin-bottom: 1rem">Delete
+                                                                style="width: 30%; margin-bottom: 1rem">Delete
                                                         </button>
                                                     </form>
                                                     <form th:unless="${applicationUser}"
                                                           th:action="@{/responseConsultation/{id}(id=${oneConsultation.getId()})}"
                                                           method="get">
                                                         <button type="submit" class="btn btn-outline-info"
-                                                                style="width: 40%; margin-bottom: 1rem">Response
-                                                            Consultation
+                                                                style="width: 30%; margin-bottom: 1rem">Response
                                                         </button>
                                                     </form>
                                                 </div>
@@ -263,9 +262,8 @@
                             </div>
                             <div class="slide-item">
                                 <div class="inner-box text-center" style="margin-top: 4rem">
-                                    <h4>Experiences</h4>
-                                    <ul class="content-list">
-                                        <li th:text="${profileUser.getExperiences()}"></li>
+                                    <h4 style="text-align: left; margin-bottom: 5px">Experiences:</h4>
+                                    <ul class="content-list" style="text-align: left;">
                                         <li><i class="far fa-dot-circle"></i>Membership of the American Psychological
                                             Association
                                         </li>
@@ -344,8 +342,7 @@
                                         <button class="btn btn-outline-danger" type="submit">DELETE</button>
                                     </form>
                                     <a class="btn btn-outline-info"
-                                       th:href="@{/showOneConsultation/{id}(id=${oneConsultation.getId()})}">View full
-                                        conversation</a>
+                                       th:href="@{/showOneConsultation/{id}(id=${oneConsultation.getId()})}">Show more</a>
                                 </div>
                             </div>
                         </div>
@@ -372,8 +369,7 @@
                     <div class="container rounded bg-white mt-5 mb-5">
                         <div class="row">
                             <form th:if="${applicationUser}" th:action="@{/editProfile}" method="get"
-                                  class="col-md-12 border-right">
-                                <div class="p-3 py-5" style="padding-top:0px; padding-right:0px;">
+                                  class="col-md-12 ">
                                     <div class="row mt-2">
                                         <div class="col-md-6"><label class="labels">First name</label><input
                                                 name="firstname" type="text" class="form-control"
@@ -398,11 +394,9 @@
                                     <div class="mt-5 text-center">
                                         <button type="submit" class="btn btn-info">Save Profile</button>
                                     </div>
-                                </div>
                             </form>
                             <form th:unless="${applicationUser}" th:action="@{/editProfile}" method="get"
-                                  class="col-md-12 border-right">
-                                <div class="p-3 py-5" style="padding-top:0px; padding-right:0px;">
+                                  class="col-md-12">
                                     <div class="row mt-2">
                                         <div class="col-md-6"><label class="labels">First name</label><input
                                                 name="firstname" type="text" class="form-control"
@@ -415,7 +409,6 @@
                                         <div class="col-md-6"><label class="labels">Upload image</label><input
                                                 type="text" name="image" placeholder="image" class="form-control"
                                                 required></div>
-                                    </div>
                                     <div class="row mt-3">
                                         <div class="col-md-12"><label class="labels">Specialties</label><input
                                                 type="text" name="specializedIn"
@@ -453,7 +446,7 @@
     <div class="footer-top">
         <div class="container">
             <div class="row justify-content-between">
-                <div class="col-lg-4 mb-5 mb-lg-0">
+                <div class="col-lg-5 mb-5 mb-lg-0">
                     <div class="about-widget">
                         <div class="footer-logo">
                             <h2>Lighthouse E-Clinic</h2>
@@ -463,7 +456,7 @@
                               </a>
                             </figure> -->
                         </div>
-                        <p>Lighthouse E-Clinic is a new and innovative online system that delivers clinical services to people experiencing mental health problems. The makes clinical care free and accessible to people wherever and whenever they need it.</p>
+                        <p style="width:90%">Lighthouse E-Clinic is a new and innovative online system that delivers clinical services to people experiencing mental health problems. The makes clinical care free and accessible to people wherever and whenever they need it.</p>
                         <ul class="location-link">
 
                             <li class="item">
@@ -494,7 +487,7 @@
                     </div>
                 </div>
                 <!--                    ToDo: Edit links-->
-                <div class="col-lg-3 col-md-5 mb-3 mb-md-0">
+                <div class="col-lg-2 col-md-5 mb-3 mb-md-0">
                     <h2>QUICK LINKS</h2>
                     <ul class="menu-link">
                         <li>
@@ -574,6 +567,7 @@
         </div>
     </div>
 </footer>
+
 <!-- scroll-to-top -->
 <div id="back-to-top" class="back-to-top">
     <i class="fa fa-angle-up"></i>
